--- a/CC-Electron/src/renderer/style.css
+++ b/CC-Electron/src/renderer/style.css
@@ -7,8 +7,8 @@
 @import url('styles/layout-variables.css');
 @import url('styles/title-bar.css');
 @import url('styles/nav-block.css');
-@import url('styles/editor-container.css');
-@import url('styles/settings-container.css');
-@import url('styles/directory-container.css');
 @import url('styles/client-area.css');
 @import url('styles/content-block.css');
+@import url('styles/directories-section.css');
+@import url('styles/editor-section.css');
+@import url('styles/settings-section.css');
