--- a/CC-Electron/src/renderer/styles/directories-section.css
+++ b/CC-Electron/src/renderer/styles/directories-section.css
@@ -1,4 +1,5 @@
 .directory-ctr {
+    border: var(--dctr-bwidth) solid var(--dctr-bcolor);
     border-radius: var(--dctr-bradius);
     display: flex;
     flex: 0 0 auto;
@@ -6,7 +7,6 @@
     height: var(--dctr-height);
 
     background-color: var(--dctr-bgcolor);
-    outline: var(--dctr-owidth) solid var(--dctr-ocolor);
 
     overflow: hidden;
 }
