--- a/CC-Electron/src/renderer/styles/settings-section.css
+++ b/CC-Electron/src/renderer/styles/settings-section.css
@@ -73,7 +73,7 @@
     color: var(--stpill-inputselect-color);
 }
 
-#ctr-save-location > .setting-pill > input {
+#ctr-captures-path > .setting-pill > input {
     width: 500px;
 }
 
